服务端测试通过，页面可以访问，API可以访问，需要完善测试页面

--- a/app/server/view/index.ejs
+++ b/app/server/view/index.ejs
@@ -12,5 +12,8 @@
   </head>
   <body>
     <div id='root'><%- reactComponent %></div>
+    <script>
+       window.__INITIAL_STATE__ = <%- initialState %>
+     </script>
   </body>
 </html>
